--- a/artifacts/deploy/ensurance.crane.io_podqoss.yaml
+++ b/artifacts/deploy/ensurance.crane.io_podqoss.yaml
@@ -195,6 +195,14 @@ spec:
                           enable:
                             type: boolean
                         type: object
+                      limitExceed:
+                        properties:
+                          time:
+                            format: int64
+                            type: integer
+                          value:
+                            type: string
+                        type: object
                       rdt:
                         properties:
                           l3:
