Support memory compression.

--- a/artifacts/deploy/ensurance.crane.io_podqoss.yaml
+++ b/artifacts/deploy/ensurance.crane.io_podqoss.yaml
@@ -231,6 +231,15 @@ spec:
                             type: integer
                         type: object
                     type: object
+                  memoryCompression:
+                    properties:
+                      CompressionLevel:
+                        maximum: 4
+                        minimum: 0
+                        type: integer
+                      enable:
+                        type: boolean
+                    type: object
                   memoryQOS:
                     properties:
                       memAsyncReclaim:
