--- a/artifacts/deploy/ensurance.crane.io_podqoss.yaml
+++ b/artifacts/deploy/ensurance.crane.io_podqoss.yaml
@@ -241,7 +241,7 @@ spec:
                     type: object
                   memoryCompression:
                     properties:
-                      CompressionLevel:
+                      compressionLevel:
                         maximum: 4
                         minimum: 0
                         type: integer
