--- a/artifacts/deploy/ensurance.crane.io_podqoss.yaml
+++ b/artifacts/deploy/ensurance.crane.io_podqoss.yaml
@@ -304,6 +304,8 @@ spec:
                             enum:
                             - Tidy
                             - Normal
+                            - FileOnly
+                            - AnonOnly
                             type: string
                         required:
                         - oversold
